name:              comparable-key
version:           0.0.1
Synopsis:          Eq, Ord and Hashable for the key part of a data type
Description:       This package allows one to define Eq, Ord and Hashable on
                   the key part of a data structure. While it is good
                   practice to define the key part of your data type
                   separately, it is often convenient to work with the
                   aggregate object. Defining Eq, Ord and Hashable directly
                   on the aggregate would be misguided as one would prefer to
                   reserve these "proper" notions of comparison for the
                   aggregate object. EqByKey, OrdByKey and HashableByKey offer
                   convenient substitutes that can be used in their stead.
                   This package does not currently interact with the keys
                   package, but support should be added in future revisions
                   (contributions welcome!).
Homepage:          http://github.com/circuithub/comparable-key
License:           MIT
Homepage:          http://github.com/circuithub/octopart
cabal-version:     >= 1.10
build-type:        Simple

Flag dev
    Description:   Turn on development settings
    Default:       False

library
    exposed-modules: Data.ComparableKey

    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0 -j
    else
        ghc-options:   -Wall -O2

    default-language: Haskell2010

    build-depends: base                          >= 4.7           && < 5
                 , bytestring                    >= 0.10.4
                 , text                          >= 1.1.1.3
                 , hashable                      >= 1.2.1         && < 1.3
